# polymarket-signals-whales

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SPEC.md  README.md  TASKS.md  notebook_bootstrap.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: endpoint_capability_matrix.md  milestone2_live_exploration.md  milestone3_wallet_exploration.md  milestone7_research_walkthrough.md
notebooks/extreme_probability/: 00_dataset_inventory.ipynb  01_extreme_probability_analysis.ipynb
notebooks/market_data_exploration/: 00_live_market_walkthrough.ipynb
scripts/: README.md  backfill_sample_markets.py  backfill_wallet_universe.py  bootstrap_env.sh  build_event_dataset.py  create_clob_api_credentials.py  generate_signal_events.py  record_live_market_stream.py  run_walk_forward_backtest.py  train_signal_classifier.py  validate_repo.sh
src/clients/: clob.py  (+3 more)
tests/: test_backfill_sample_markets_script.py  test_backfill_wallet_universe_script.py  test_backtesting.py  test_build_event_dataset_script.py  test_create_clob_api_credentials.py  test_endpoint_capabilities.py  test_event_dataset.py  test_generate_signal_events_script.py  test_live_market_recorder.py  test_market_anomalies.py  test_notebook_bootstrap.py  test_public_api_clients.py  test_repo_guardrails.py  test_run_walk_forward_backtest_script.py  test_sample_market_backfill.py  test_signal_classifier.py  test_signal_event_detector.py  test_storage.py  test_train_signal_classifier_script.py  test_wallet_backfill.py  test_wallet_exploration.py  test_wallet_features.py  test_wallet_profiles.py
(+23 files in other folders)
