[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-signals-whales"
version = "0.1.0"
description = "Research-first tooling for Polymarket whale signal discovery and evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
